# LightningAI-001

./: .gitignore  README.md  main.py  requirements-train.txt  requirements.txt
001/: README.md  pyproject.toml  run.py
002/: README.md  pyproject.toml  run.py
002/configs/: mini.yaml
002/data/sample/: zh_smoke.txt
002/moe_zh/: balance.py  config.py  data.py  generate.py  model.py  prepare_d0.py  tokenizer_util.py
003/: README.md  agent.py  nim_client.py  run.py  sandbox_tools.py  tools.py
configs/: smoke.yaml
docs/: 001-basic-submit.md  002-gpu-and-s2.md  002-moe-plan.md  002-s1-smoke-design.md  003-sandbox-ceiling.md
examples/: 01_hello_job.py
moe_zh/: __init__.py  train.py
scripts/: 01_hello_job.sh  s1_smoke_job.py  s1_smoke_local.sh
